include/mcl/bn.h

	#define MCL_FP_BIT ((MCLBN_FP_UNIT_SIZE)*64)
		#define MCLBN_FR_UNIT_SIZE MCLBN_FP_UNIT_SIZE
	#define MCL_FR_BIT ((MCLBN_FR_UNIT_SIZE)*64)
	#define MCLBN_FP_UNIT_SIZE ((MCL_FP_BIT)/64)
	#define MCLBN_FR_UNIT_SIZE ((MCL_FR_BIT)/64)
// DON'T CHANGE this value because it is used from other languages such as C# and WASM.
#define MCLBN_COMPILED_TIME_VAR ((MCLBN_FR_UNIT_SIZE) * 10 + (MCLBN_FP_UNIT_SIZE))
typedef struct mclBnFr mclBnFr;
typedef struct mclBnG1 mclBnG1;
typedef struct mclBnG2 mclBnG2;
typedef struct mclBnGT mclBnGT;
typedef struct mclBnFp mclBnFp;
typedef struct {
	uint64_t d[MCLBN_FP_UNIT_SIZE];
} mclBnFp;
/*
	G1 and G2 are isomorphism to Fr
*/
typedef struct {
	uint64_t d[MCLBN_FR_UNIT_SIZE];
} mclBnFr;
/*
	G1 is defined over Fp
*/
typedef struct {
	mclBnFp x, y, z;
} mclBnG1;
typedef struct {
	mclBnFp2 x, y, z;
} mclBnG2;
typedef struct {
	mclBnFp d[12];
} mclBnGT;
// return 0xABC which means A.BC
MCL_DLL_API int mclBn_getVersion(void);
/*
	init library
	@param curve [in] type of bn curve
	@param compiledTimeVar [in] specify MCLBN_COMPILED_TIME_VAR,
	which macro is used to make sure that the values
	are the same when the library is built and used
	@return 0 if success
	curve = BN254/BN_SNARK1 is allowed if MCL_FP_BIT >= 256
	curve = BLS12_381/BLS12_377 are allowed if MCL_FP_BIT >= 384 and MCL_FR_BIT >= 256
	curve = BN381_1/BN381_2 are allowed if MCL_FP_BIT >= 384 and MCL_FR_BIT >= 387
	This parameter is used to detect a library compiled with different MCL_FP_BIT for safety.
	@note not threadsafe
	@note BN_init is used in libeay32
*/
MCL_DLL_API int mclBn_init(int curve, int compiledTimeVar);
/*
	return bytes for serialized G1(=size of Fp) + adj
	adj = 1 if p is full bit else 0
*/
MCL_DLL_API int mclBn_getG1ByteSize(void);
/*
	return bytes for serialized Fr
*/
MCL_DLL_API int mclBn_getFrByteSize(void);
/*
	return bytes for serialized Fp
*/
MCL_DLL_API int mclBn_getFpByteSize(void);
////////////////////////////////////////////////
/*
	deserialize
	return read size if success else 0
*/
MCL_DLL_API mclSize mclBnFr_deserialize(mclBnFr *x, const void *buf, mclSize bufSize);
MCL_DLL_API mclSize mclBnG1_deserialize(mclBnG1 *x, const void *buf, mclSize bufSize);
MCL_DLL_API mclSize mclBnG2_deserialize(mclBnG2 *x, const void *buf, mclSize bufSize);
MCL_DLL_API mclSize mclBnGT_deserialize(mclBnGT *x, const void *buf, mclSize bufSize);
MCL_DLL_API mclSize mclBnFp_deserialize(mclBnFp *x, const void *buf, mclSize bufSize);
/*
	serialize
	return written byte if sucess else 0
*/
MCL_DLL_API mclSize mclBnFr_serialize(void *buf, mclSize maxBufSize, const mclBnFr *x);
MCL_DLL_API mclSize mclBnG1_serialize(void *buf, mclSize maxBufSize, const mclBnG1 *x);
MCL_DLL_API mclSize mclBnG2_serialize(void *buf, mclSize maxBufSize, const mclBnG2 *x);
MCL_DLL_API mclSize mclBnGT_serialize(void *buf, mclSize maxBufSize, const mclBnGT *x);
MCL_DLL_API mclSize mclBnFp_serialize(void *buf, mclSize maxBufSize, const mclBnFp *x);
// set zero
MCL_DLL_API void mclBnFr_clear(mclBnFr *x);
MCL_DLL_API void mclBnFp_clear(mclBnFp *x);
MCL_DLL_API void mclBnFr_setInt32(mclBnFr *y, int x);
MCL_DLL_API void mclBnFp_setInt32(mclBnFp *y, int x);
// set (buf mod r) to x
// return 0 if bufSize <= (byte size of Fr * 2) else -1
MCL_DLL_API int mclBnFr_setLittleEndianMod(mclBnFr *x, const void *buf, mclSize bufSize);
// return 1 if true and 0 otherwise
MCL_DLL_API int mclBnFr_isValid(const mclBnFr *x);
MCL_DLL_API int mclBnFr_isEqual(const mclBnFr *x, const mclBnFr *y);
MCL_DLL_API int mclBnFr_isZero(const mclBnFr *x);
MCL_DLL_API int mclBnFr_isOne(const mclBnFr *x);
MCL_DLL_API int mclBnFp_isValid(const mclBnFp *x);
MCL_DLL_API int mclBnFp_isEqual(const mclBnFp *x, const mclBnFp *y);
MCL_DLL_API int mclBnFp_isZero(const mclBnFp *x);
// return 0 if success
MCL_DLL_API int mclBnFr_setByCSPRNG(mclBnFr *x);
MCL_DLL_API void mclBnFr_neg(mclBnFr *y, const mclBnFr *x);
MCL_DLL_API void mclBnFr_inv(mclBnFr *y, const mclBnFr *x);
MCL_DLL_API void mclBnFr_add(mclBnFr *z, const mclBnFr *x, const mclBnFr *y);
MCL_DLL_API void mclBnFr_sub(mclBnFr *z, const mclBnFr *x, const mclBnFr *y);
MCL_DLL_API void mclBnFr_mul(mclBnFr *z, const mclBnFr *x, const mclBnFr *y);
////////////////////////////////////////////////
// set zero
MCL_DLL_API void mclBnG1_clear(mclBnG1 *x);
// return 1 if true and 0 otherwise
MCL_DLL_API int mclBnG1_isValid(const mclBnG1 *x);
MCL_DLL_API int mclBnG1_isEqual(const mclBnG1 *x, const mclBnG1 *y);
MCL_DLL_API int mclBnG1_isZero(const mclBnG1 *x);
/*
	return 1 if x has a correct order
	x is valid point of G1 if and only if
	mclBnG1_isValid() is true, which contains mclBnG1_isValidOrder() if mclBn_verifyOrderG1(true)
	mclBnG1_isValid() && mclBnG1_isValidOrder() is true if mclBn_verifyOrderG1(false)
*/
MCL_DLL_API int mclBnG1_isValidOrder(const mclBnG1 *x);
MCL_DLL_API int mclBnG1_hashAndMapTo(mclBnG1 *x, const void *buf, mclSize bufSize);
MCL_DLL_API void mclBnG1_neg(mclBnG1 *y, const mclBnG1 *x);
MCL_DLL_API void mclBnG1_dbl(mclBnG1 *y, const mclBnG1 *x);
MCL_DLL_API void mclBnG1_normalize(mclBnG1 *y, const mclBnG1 *x);
MCL_DLL_API void mclBnG1_add(mclBnG1 *z, const mclBnG1 *x, const mclBnG1 *y);
MCL_DLL_API void mclBnG1_sub(mclBnG1 *z, const mclBnG1 *x, const mclBnG1 *y);
MCL_DLL_API void mclBnG1_mul(mclBnG1 *z, const mclBnG1 *x, const mclBnFr *y);
/*
	constant time mul
*/
MCL_DLL_API void mclBnG1_mulCT(mclBnG1 *z, const mclBnG1 *x, const mclBnFr *y);
////////////////////////////////////////////////
// set zero
MCL_DLL_API void mclBnG2_clear(mclBnG2 *x);
// return 1 if true and 0 otherwise
MCL_DLL_API int mclBnG2_isValid(const mclBnG2 *x);
MCL_DLL_API int mclBnG2_isEqual(const mclBnG2 *x, const mclBnG2 *y);
MCL_DLL_API int mclBnG2_isZero(const mclBnG2 *x);
// return 1 if x has a correct order
MCL_DLL_API int mclBnG2_isValidOrder(const mclBnG2 *x);
MCL_DLL_API int mclBnG2_hashAndMapTo(mclBnG2 *x, const void *buf, mclSize bufSize);
// return written size if sucess else 0

MCL_DLL_API void mclBnG2_neg(mclBnG2 *y, const mclBnG2 *x);
MCL_DLL_API void mclBnG2_dbl(mclBnG2 *y, const mclBnG2 *x);
MCL_DLL_API void mclBnG2_normalize(mclBnG2 *y, const mclBnG2 *x);
MCL_DLL_API void mclBnG2_add(mclBnG2 *z, const mclBnG2 *x, const mclBnG2 *y);
MCL_DLL_API void mclBnG2_sub(mclBnG2 *z, const mclBnG2 *x, const mclBnG2 *y);
MCL_DLL_API void mclBnG2_mul(mclBnG2 *z, const mclBnG2 *x, const mclBnFr *y);
////////////////////////////////////////////////
// set zero
MCL_DLL_API void mclBnGT_clear(mclBnGT *x);
MCL_DLL_API void mclBnGT_setInt32(mclBnGT *y, int x);
// return 1 if true and 0 otherwise
MCL_DLL_API int mclBnGT_isEqual(const mclBnGT *x, const mclBnGT *y);
MCL_DLL_API int mclBnGT_isZero(const mclBnGT *x);
MCL_DLL_API int mclBnGT_isOne(const mclBnGT *x);
MCL_DLL_API void mclBnGT_mul(mclBnGT *z, const mclBnGT *x, const mclBnGT *y);
// y = conjugate of x in Fp12, which is equal to the inverse of x if |x|^r = 1
MCL_DLL_API void mclBnGT_inv(mclBnGT *y, const mclBnGT *x);
/*
	pow for only {x|x^r = 1} in GT by GLV method
	the value generated by pairing satisfies the condition
*/
MCL_DLL_API void mclBnGT_pow(mclBnGT *z, const mclBnGT *x, const mclBnFr *y);
MCL_DLL_API void mclBn_pairing(mclBnGT *z, const mclBnG1 *x, const mclBnG2 *y);
MCL_DLL_API void mclBn_finalExp(mclBnGT *y, const mclBnGT *x);
MCL_DLL_API void mclBn_millerLoop(mclBnGT *z, const mclBnG1 *x, const mclBnG2 *y);
// z = prod_{i=0}^{n-1} millerLoop(x[i], y[i])
MCL_DLL_API void mclBn_millerLoopVec(mclBnGT *z, const mclBnG1 *x, const mclBnG2 *y, mclSize n);
/*
	verify whether a point of an elliptic curve has order r
	This api affetcs setStr(), deserialize() for G2 on BN or G1/G2 on BLS12
	@param doVerify [in] does not verify if zero(default 1)
*/
MCL_DLL_API void mclBn_verifyOrderG1(int doVerify);
MCL_DLL_API void mclBn_verifyOrderG2(int doVerify);